fixed alignment issue in navigation

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 .nav__main {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     background-color: #121212;
     position: fixed;
